[package]
name = "async-json-stream"
version = "0.1.0"
authors = ["Adam Szalkowski <adam@szalkowski.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
serde = "1.0.114"
serde_json = "1.0.56"
thiserror = "1.0.20"

[dev-dependencies]
tokio = { version = "0.2.21", features = ["macros","rt-threaded"] }
