[package]
name = "json-array-stream"
description = "Incrementally reads a JSON array through an async stream"
version = "0.1.0"
authors = ["Adam Szalkowski <adam@szalkowski.de>"]
homepage = "https://github.com/butzist/async-json-stream/"
repository = "https://github.com/butzist/async-json-stream/"
categories = ["asynchronous", "parsing"]
keywords = ["json", "async", "stream"]
license-file = "LICENSE"
readme = "README.md"
edition = "2018"

[dependencies]
futures = "0.3.5"
serde = "1.0.114"
serde_json = "1.0.56"
thiserror = "1.0.20"

[dev-dependencies]
tokio = { version = "0.2.21", features = ["macros","rt-threaded"] }